# SandSim

./: Cargo.toml  build.rs  readme.md
compute_shaders/: color.glsl  includes.glsl  matter.glsl  slide_down_empty.glsl
src/: app.rs  ca_simulator.rs  camera.rs  gui.rs  main.rs  matter.rs  quad_pipeline.rs  render.rs  timer.rs  utils.rs  vertex.rs
src/matter/: example_matter_definitions.rs  matter_definition.rs  matter_state.rs  mod.rs
src/world/: display.rs  material.rs  mod.rs  physics.rs  utils.rs  world.rs
