[package]
name = "SandSim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_vulkano = { version = "0.6.0", features = ["gui"] }
bytemuck = "1.9.1"
vulkano = "0.30.0"
vulkano-shaders = "0.30.0"
vulkano-util = "0.30.0"
strum_macros = "0.24.0"
strum = "0.24.0"

# Bevy Game framework without default features, because we're replacing the gfx backend with Vulkano
[dependencies.bevy]
version = "0.8.0"
default-features = false
features = []